[package]
name = "dedup"
version = "0.1.0"
edition = "2021"
licence = "EUPL-1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
clap_complete = "3.1.1"

# serialization stuff
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"

chrono = "0.4.23"
configparser = "3.0.0"
dirs = "4.0.0"
flate2 = { version = "1.0.22", features = ["rust_backend"] }
walkdir = "2.3.2"
rayon = "1.5.1"
log = "0.4.14"
tracing = "0.1.35"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
env_logger = "0.9.0"
hash-roll = "0.3.0"
testfile = "0.0.4"
rand = "0.8.5"
memmap = "0.7"
sled = "0.34.7" # Rust native database

# cryto stuff
chacha20poly1305 = "0.10.1" # symmetric authenticating encryption
blake3 = { version = "1.3.1", features = ["rayon"] }
rand_core = { version = "0.6", features = ["std"] }
rust-argon2 = "1.0.0"
num = "0.4.0"
lazy-init = "0.5.1"
once_cell = "1.17.1"
async-std = "1.12.0"

[profile.release]
opt-level = 3  # Optimize for speed.
strip = true  # Automatically strip symbols from the binary.

[profile.test]
opt-level = 3
strip = true
